force-app/main/default/objects/Security_Finding__c/Security_Finding__c.object-meta.xml
<CustomObject>
    <description>Stores one security review finding.</description>
    <label>Security Finding</label>
    <nameField>
        <displayFormat>SF-{00000}</displayFormat>
        <label>Security Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>