force-app/main/default/objects/Security_Finding__c/fields/Finding_Key__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <fullName>Finding_Key__c</fullName>
    <label>Finding Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>