force-app/main/default/objects/Security_Finding__c/fields/Permission_Artifact__c.field-meta.xml
<CustomField>
    <fullName>Permission_Artifact__c</fullName>
    <label>Permission Artifact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>