force-app/main/default/objects/Security_Finding__c/fields/Run_Key__c.field-meta.xml
<CustomField>
    <fullName>Run_Key__c</fullName>
    <label>Run Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>